[package]
name = "marine_vessel_simulator"
version = "0.1.0"
license = "GPL-3.0-or-later"
# license-file = "LICENSE"
edition = "2024"
description = "A simulator for marine vessels and their performance in various conditions."
repository = "https://github.com/G0rocks/marine_vessel_simulator"
categories = ["simulation", "science::geo"]
keywords = ["engineering", "shipping", "marine", "vessel", "simulation"]
readme = "README.md"

[dependencies]
# Temporary direct path dependency for local development
plotly = { path = "C:/Users/Huldar/Reykjavik University/Meistaraverkefni - Huldar - General/Model and calculators/plotly_local/plotly" }

csv = "1.3.1"
geo = "0.30.0"
io = "0.0.2"
# plotly = "0.12.1"
plotters = "0.3.7"
rand = "0.9.1"
uom = "0.36.0"
year-helper = "0.2.1"

